fix button spacing and fucntionality.

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,11 +1,13 @@
-h1 {
+/*h1 {
   text-align: center;
   color: rgb(80,80,80);
   margin: 30px;
   letter-spacing: 5px;
   border-bottom: 1px solid rgb(200,200,200);
   padding-bottom: 15px;
-}
+}*/
+
+
 
 .card {
   text-align: center;
@@ -24,26 +26,31 @@ h1 {
 
 }
 
+
+
 .card button:hover {
   cursor:pointer;
   opacity: 0.5;
 }
+
+
 
 .card button:active {
   opacity: 0.1;
 }
 
 .edit-button {
-  position:absolute;
-  left: 10px;
-  top: 10px;
+
+  text-align: center;
   opacity: 0.7;
   border: none;
   background:none !important;
   outline: inherit !important;
 }
 
-.back-button {
+
+
+/*.back-button {
   position:absolute;
   right: 10px;
   top: 10px;
@@ -52,58 +59,54 @@ h1 {
   background:none !important;
   outline: inherit !important;
 
-}
+}*/
+
+
 
 .delete-button {
-  position:absolute;
-  right: 10px;
-  top: 10px;
+  /*position:absolute;*/
+  /*right: 10px;
+  top: 10px;*/
   opacity: 0.7;
   border: none;
   background:none !important;
   outline: inherit !important;
 
 }
+
+
 
 .details-button {
-  position: absolute;
-  left: 10px;
-  bottom:10px;
+
+
   opacity: 0.7;
   border: none;
   background:none !important;
   outline: inherit !important;
 }
 
-.animal-level {
-  margin-left: 7%;
-}
+
+
 
 .details {
   color: #505050;
 }
 
-.back-button {
+/*.back-button {
   position:absolute;
   right: 10px;
   top: 10px;
-}
+}*/
+
+
 
 .filters {
   text-align: center;
 }
 
-.badge-success {
-  background-color: #19a66d!important;
-  border-radius: 0.115rem!important;
-  font-weight: lighter!important;
-}
 
-.badge-default {
 
-  border-radius: 0.115rem!important;
-  font-weight: lighter!important;
-}
+
 
 .add-form h1{
   color: white!important;
